crates/ketch-core/src/snapshots/ketch_core__ui__tests__no_line_kind_carries_an_icon_when_emoji_are_off.snap
---
source: crates/ketch-core/src/ui.rs
assertion_line: 1416
expression: shown
---
installing ripgrep 14.1.0
 installed ripgrep 14.1.0
   warning ripgrep ships no checksum
      note ripgrep is pinned
     debug GET /repos/BurntSushi/ripgrep
     error `ghost` is not installed
           looked in state.json
      hint run `ketch list`
   confirm remove ripgrep? [y/N] 
 cancelled remove ripgrep?
    answer package name?
